Jigsaw Puzzle Demo Fixed

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -49,8 +49,8 @@
                     <div class="tag web-audio">Web Audio API</div>
                 </div>
                 <div class="buttons">
-                    <div class="source button"><div class="bg"></div><span class="text">Source Code</span></div>
-                    <div class="demo button"><div class="bg"></div><span class="text">Live Demo</span></div>
+                    <div class="source button"><div class="bg"></div><a target="_blank" href="https://github.com/Nico-Src/nico-src.github.io/tree/master/projects/audio-visualizer" class="text">Source Code</a></div>
+                    <div class="demo button"><div class="bg"></div><a target="_blank" href="https://nico-src.github.io/projects/audio-visualizer/" class="text">Live Demo</a></div>
                 </div>
             </div>
         </div>
