Detail Page for Projects added (+ Slider)

--- a/index.html
+++ b/index.html
@@ -61,6 +61,18 @@
                             <span class="name">skills.html</span>
                         </div>
                     </div>
+                    <div class="pane-item directory" id="projects-directory" data-path="projects/">
+                        <div class="arrow"><i class='bx bx-chevron-down icon'></i></div>
+                        <img class="icon" src="img/icons/folder.svg">
+                        <span class="name">projects</span>
+                    </div>
+                    <div class="pane-item-children pane-content layer-1" data-category="projects-directory" data-items="1" data-parent="projects-directory">
+                        <div class="pane-item" data-close="false" data-path="projects/mangadb.html">
+                            <div class="close-action"><i class='bx bx-x'></i></div>
+                            <img class="icon" src="img/icons/html.svg">
+                            <span class="name">mangadb.html</span>
+                        </div>
+                    </div>
                     <div class="pane-item directory" id="css-directory" data-path="css/">
                         <div class="arrow"><i class='bx bx-chevron-down icon'></i></div>
                         <img class="icon" src="img/icons/folder-css.svg">
