--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,6 +1,6 @@
 <div class="sub-content">
     <div class="projects">
-        <div class="project mangadb">
+        <div class="project mangadb" data-path="projects/mangadb.html" data-icon="img/icons/html.svg" data-name="mangadb.html">
             <div class="image">
                 <img src="img/logo/mangadb.png">
             </div>
@@ -41,7 +41,7 @@
             </div>
             <div class="details">
                 <div class="name">Audio Visualizer</div>
-                <div class="description">A web app to visualize music. Includes six different audio visualizers and a file picker to choose which music to visualize.</div>
+                <div class="description">A web application designed for music visualization, offering five distinct audio visualizers and a file picker for selecting the desired music to accompany the experience.</div>
                 <div class="tags">
                     <div class="tag html">Html</div>
                     <div class="tag css">Css</div>
@@ -50,7 +50,7 @@
                 </div>
                 <div class="buttons">
                     <div class="source button"><div class="bg"></div><a target="_blank" href="https://github.com/Nico-Src/nico-src.github.io/tree/master/projects/audio-visualizer" class="text">Source Code</a></div>
-                    <div class="demo button"><div class="bg"></div><a target="_blank" href="https://nico-src.github.io/projects/audio-visualizer/" class="text">Live Demo</a></div>
+                    <div class="demo button"><div class="bg"></div><a target="_blank" href="https://nico-src.github.io/projects/audio-visualizer" class="text">Live Demo</a></div>
                 </div>
             </div>
         </div>
@@ -60,15 +60,31 @@
             </div>
             <div class="details">
                 <div class="name">Puzzle Lib</div>
-                <div class="description">A small library to create a playable puzzle from an image.</div>
+                <div class="description">A compact tool for crafting playable puzzles from images.</div>
                 <div class="tags">
                     <div class="tag html">Html</div>
                     <div class="tag css">Css</div>
                     <div class="tag javascript">Javascript</div>
                 </div>
                 <div class="buttons">
-                    <div class="source button"><div class="bg"></div><span class="text">Source Code</span></div>
-                    <div class="demo button"><div class="bg"></div><span class="text">Live Demo</span></div>
+                    <div class="source button"><div class="bg"></div><a target="_blank" href="https://github.com/Nico-Src/nico-src.github.io/tree/master/projects/jigsaw-puzzle" class="text">Source Code</a></div>
+                    <div class="demo button"><div class="bg"></div><a target="_blank" href="https://nico-src.github.io/projects/jigsaw-puzzle" class="text">Live Demo</a></div>
+                </div>
+            </div>
+        </div>
+        <div class="project voxel-game">
+            <div class="image">
+                <img src="img/logo/voxel.png">
+            </div>
+            <div class="details">
+                <div class="name">C# Voxel Game</div>
+                <div class="description">Unity voxel game incorporating terrain generation, dynamic lighting, user-friendly commands, and additional features like Builder Mode and a VR experience.</div>
+                <div class="tags">
+                    <div class="tag unity">Unity</div>
+                    <div class="tag csharp">C#</div>
+                </div>
+                <div class="buttons">
+                    <div class="source single button"><div class="bg"></div><a target="_blank" href="https://github.com/Nico-Src/Unity-Minecraft-Clone" class="text">Source Code</a></div>
                 </div>
             </div>
         </div>
@@ -76,6 +92,15 @@
 </div>
 <script>
     window.subContent = document.querySelector('.sub-content');
+    Array.from(document.querySelectorAll('.sub-content .project')).forEach((el)=>{
+        if(el.getAttribute('data-path')){
+            el.onclick = (e) => {
+                if(e.target.classList.contains('button')) return;
+
+                fileItemClickExplorer({target: document.querySelector('.side-bar [data-category="explorer"] .pane-item[data-path="projects/mangadb.html"]')});
+            };
+        }
+    });
 
     setTimeout(()=>{
         subContent.classList.add('transition');
@@ -104,6 +129,13 @@
         align-items:self-start;
     }
 
+    .editor .sub-content::-webkit-scrollbar{width: 14px;height: 14px;}
+    .editor .sub-content::-webkit-scrollbar-track{background-color: transparent;}
+    .editor .sub-content::-webkit-scrollbar-thumb{background-color: var(--editor-scrollbar-thumb-bg);}
+    .editor .sub-content::-webkit-scrollbar-thumb:hover{background-color: var(--editor-scrollbar-thumb-hover-bg);}
+    .editor .sub-content::-webkit-scrollbar-thumb:active{background-color: var(--editor-scrollbar-thumb-active-bg);}
+    .editor .sub-content::-webkit-scrollbar-corner{background-color: transparent;}
+
     .editor .sub-content .projects .project{
         background-color: var(--side-bar-bg);
         border-bottom: 4px solid var(--side-bar-border-color);
@@ -118,14 +150,14 @@
         opacity: 0;
         transform: scale(0.7);
         cursor: pointer;
-        transition: transform .25s ease, opacity .2s ease;
+        transition: transform .25s ease, opacity .2s ease, border .2s ease;
     }
 
-    .editor .sub-content .projects .project:nth-child(2){ transition-delay: .1s;}
-    .editor .sub-content .projects .project:nth-child(3){ transition-delay: .2s;}
-    .editor .sub-content .projects .project:nth-child(4){ transition-delay: .3s;}
-    .editor .sub-content .projects .project:nth-child(5){ transition-delay: .4s;}
-    .editor .sub-content .projects .project:nth-child(6){ transition-delay: .5s;}
+    .editor .sub-content .projects .project:nth-child(2){ transition: transform .25s ease .1s, opacity .2s ease .1s, border .2s ease; }
+    .editor .sub-content .projects .project:nth-child(3){ transition: transform .25s ease .2s, opacity .2s ease .2s, border .2s ease; }
+    .editor .sub-content .projects .project:nth-child(4){ transition: transform .25s ease .3s, opacity .2s ease .3s, border .2s ease; }
+    .editor .sub-content .projects .project:nth-child(5){ transition: transform .25s ease .4s, opacity .2s ease .4s, border .2s ease; }
+    .editor .sub-content .projects .project:nth-child(6){ transition: transform .25s ease .5s, opacity .2s ease .5s, border .2s ease; }
 
     .editor .sub-content.transition .projects .project{
         transform: scale(1);
@@ -141,6 +173,7 @@
         align-items: center;
         flex-shrink: 0;
         border-radius: 4px;
+        pointer-events: none;
     }
 
     .editor .sub-content .projects .project .image img{
@@ -156,6 +189,13 @@
     .editor .sub-content .projects .project.lego .image{ background-color: rgb(211, 46, 46); }
     .editor .sub-content .projects .project.audio-viz .image{ background-color: #6e91f1; }
     .editor .sub-content .projects .project.puzzle .image{ background-color: #dd9a17; }
+    .editor .sub-content .projects .project.voxel-game .image{ background-color: #4f3624; }
+
+    .editor .sub-content .projects .project.mangadb:hover{ border-color: #DDD; }
+    .editor .sub-content .projects .project.lego:hover{ border-color: rgb(211, 46, 46); }
+    .editor .sub-content .projects .project.audio-viz:hover{ border-color: #6e91f1; }
+    .editor .sub-content .projects .project.puzzle:hover{ border-color: #dd9a17; }
+    .editor .sub-content .projects .project.voxel-game:hover{ border-color: #4f3624; }
 
     .editor .sub-content .projects .project .image img{
         width: 80%;
@@ -179,6 +219,7 @@
         font-weight: bold;
         width: 100%;
         text-align: start;
+        pointer-events: none;
     }
 
     .editor .sub-content .projects .project .details .description{
@@ -188,6 +229,7 @@
         font-size: 12px;
         width: 100%;
         text-align: start;
+        pointer-events: none;
     }
 
     .editor .sub-content .projects .project .details .tags{
@@ -235,6 +277,10 @@
     .editor .sub-content .projects .project .details .tags .tag.javascript:hover{background-color: rgb(243, 223, 30, .5); color:white;}
     .editor .sub-content .projects .project .details .tags .tag.web-audio{border-color: rgb(128, 78, 189); color:white;}
     .editor .sub-content .projects .project .details .tags .tag.web-audio:hover{background-color: rgb(128, 78, 189, .5); color:white;}
+    .editor .sub-content .projects .project .details .tags .tag.unity{border-color: rgb(166, 166, 166); color:white;}
+    .editor .sub-content .projects .project .details .tags .tag.unity:hover{background-color: rgba(166, 166, 166, 0.5); color:white;}
+    .editor .sub-content .projects .project .details .tags .tag.csharp{border-color: rgb(155, 71, 147);}
+    .editor .sub-content .projects .project .details .tags .tag.csharp:hover{background-color: rgb(155, 71, 147, .5); color:white;}
 
     .editor .sub-content .projects .project .details .buttons{
         width: 100%;
@@ -251,10 +297,13 @@
         justify-content: flex-start;
         align-items: flex-end;
         position: relative;
-        margin-right: 10px;
         cursor: pointer;
         opacity: .5;
         transition: opacity .2s ease;
+    }
+
+    .editor .sub-content .projects .project .details .buttons .button:first-child:not(.single){
+        margin-right: 10px;
     }
 
     .editor .sub-content .projects .project .details .buttons .button:hover{
