--- a/projects/lego-builder.html
+++ b/projects/lego-builder.html
@@ -3,20 +3,10 @@
         <div class="slider-wrapper">
             <i class='bx bx-chevron-left btn' id="prev-slide"></i>
             <div class="media-list">
-                <img class="media-item" src="img/project-assets/mangadb/image-1.jpg" alt="MangaDB"/>
-                <div class="media-item" title="Series Page" data-title="Series Page">
-                    <img loading="lazy" src="img/project-assets/mangadb/series.png" alt="Series Page"/>
+                <img class="media-item" src="img/project-assets/lego-builder/interface.png" alt="Interface"/>
+                <div class="media-item" title="Selection" data-title="Selection">
+                    <img loading="lazy" src="img/project-assets/lego-builder/selection.png" alt="Selection"/>
                 </div>
-                <div class="media-item" title="Browse Series..." data-title="Browse Series...">
-                    <img loading="lazy" src="img/project-assets/mangadb/browse-series.png" alt="Browse Series..."/>
-                </div>
-                <div class="media-item" title="Settings" data-title="Settings">
-                    <img loading="lazy" src="img/project-assets/mangadb/settings.png" alt="Settings"/>
-                </div>
-                <div class="media-item" title="Media-Library" data-title="Media-Library">
-                    <img loading="lazy" src="img/project-assets/mangadb/media-library.png" alt="Media-Library"/>
-                </div>
-                <iframe class="media-item" width="460" height="315" style="object-fit: contain;" src="https://www.youtube.com/embed/45Tm-hqtGOU?si=bATRsDNKpwE7yC3l" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
             <i class='bx bx-chevron-right btn' id="next-slide"></i>
         </div>
@@ -27,40 +17,20 @@
         </div>
     </div>
     <div class="details">
-        <div class="name">MangaDB</div>
+        <div class="name">Lego-Builder</div>
         <div class="column">
             <div class="description">
-                A robust platform for manga enthusiasts, providing efficient collection and list management, along with detailed insights into series, 
-                publishers, contributors, and editions. Includes a Frontend using <b>Nuxt</b>, a Backend / Rest API with <b>NodeJS</b> and a <b>MySQL</b> 
-                database. <br><br><i>Currently features around 45.000 Volumes, 2000 Series, 1200 Contributors and 200 Publishers.</i>
-                <br><br><b><u>Frontend Features:</u></b><br>
-                <span>-&nbsp;Browse Series (Tags, Aliases, Tag-Blacklist, ...)</span><br>
-                <span>-&nbsp;Browse Contributors and their Works</span><br>
-                <span>-&nbsp;Browse Publishers and their published Works</span><br>
-                <span>-&nbsp;Series Details (Volumes, Special Editions, Relations, Publishers, ...)</span><br>
-                <span>-&nbsp;Release Calendar</span><br>
-                <span>-&nbsp;Home Content (Recently Added, Latest Updates, Next Releases, ...)</span><br>
-                <span>-&nbsp;Extensive Settings (Theme, Adult Content, Language, ...)</span><br>
-                <span>-&nbsp;List Management (Create, Delete, Manage, ...)</span><br>
-                <span>-&nbsp;Collection Management (Prices, Dates, Statistics, ...)</span><br>
-                <span>-&nbsp;Reading History</span><br>
-                <span>-&nbsp;<u>Administration:</u></span><br>
-                <span>&nbsp;&nbsp;&nbsp;&nbsp;- Volumes, Series, Contributors, Publishers, Filters</span><br>
-                <span>&nbsp;&nbsp;&nbsp;&nbsp;- Other Media (Media Library)</span><br>
-                <span>&nbsp;&nbsp;&nbsp;&nbsp;- Users, Roles, Permissions</span><br>
-                <span>&nbsp;&nbsp;&nbsp;&nbsp;- Reports</span><br>
-                <br><b><u>Some Backend Features:</u></b><br>
-                <span>-&nbsp;Image Compression and Resizing on Upload (With MozJPEG)</span><br>
-                <span>-&nbsp;Web Scraper for Volumes (Using Puppeteer and Cheerio)</span><br>
+                A web app to construct lego buildings. An performant web lego builder. Used models are from the LDraw Model Database. Uses instanced rendering for the different parts.
+                <br><br>
+                <i>Supports exporting and importing in json format.</i>
             </div>
         </div>
         <div class="column">
             <div class="tags">
-                <div class="tag nuxt">NuxtJS</div>
-                <div class="tag node">NodeJS</div>
-                <div class="tag express">Express</div>
-                <div class="tag puppeteer">Puppeteer</div>
-                <div class="tag mysql">Mysql</div>
+                <div class="tag html">Html</div>
+                <div class="tag css">Css</div>
+                <div class="tag babylon">Babylon</div>
+                <div class="tag javascript">Javascript</div>
             </div>
         </div>
     </div>
