--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
                             <img class="icon" src="img/icons/html.svg">
                             <span class="name">mangadb.html</span>
                         </div>
+                        <div class="pane-item" data-close="false" data-path="projects/lego-builder.html">
+                            <div class="close-action"><i class='bx bx-x'></i></div>
+                            <img class="icon" src="img/icons/html.svg">
+                            <span class="name">lego-builder.html</span>
+                        </div>
                     </div>
                     <div class="pane-item directory" id="css-directory" data-path="css/">
                         <div class="arrow"><i class='bx bx-chevron-down icon'></i></div>
