Fixed Source Links

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -30,7 +30,7 @@
                     <div class="tag javascript">Javascript</div>
                 </div>
                 <div class="buttons">
-                    <div class="source button"><div class="bg"></div><a target="_blank" href="https://github.com/Nico-Src/nico-src.github.io/VS-Code-Portfoliotree/master/projects/lego-3d" class="text">Source Code</a></div>
+                    <div class="source button"><div class="bg"></div><a target="_blank" href="https://github.com/Nico-Src/VS-Code-Portfolio/tree/master/projects/lego-3d" class="text">Source Code</a></div>
                     <div class="demo button"><div class="bg"></div><a target="_blank" href="https://nico-src.github.io/VS-Code-Portfolio/projects/lego-3d/" class="text">Live Demo</a></div>
                 </div>
             </div>
@@ -49,7 +49,7 @@
                     <div class="tag web-audio">Web Audio API</div>
                 </div>
                 <div class="buttons">
-                    <div class="source button"><div class="bg"></div><a target="_blank" href="https://github.com/Nico-Src/nico-src.github.io/VS-Code-Portfoliotree/master/projects/audio-visualizer" class="text">Source Code</a></div>
+                    <div class="source button"><div class="bg"></div><a target="_blank" href="https://github.com/Nico-Src/VS-Code-Portfolio/tree/master/projects/audio-visualizer" class="text">Source Code</a></div>
                     <div class="demo button"><div class="bg"></div><a target="_blank" href="https://nico-src.github.io/VS-Code-Portfolio/projects/audio-visualizer" class="text">Live Demo</a></div>
                 </div>
             </div>
@@ -67,7 +67,7 @@
                     <div class="tag javascript">Javascript</div>
                 </div>
                 <div class="buttons">
-                    <div class="source button"><div class="bg"></div><a target="_blank" href="https://github.com/Nico-Src/nico-src.github.io/VS-Code-Portfolio/tree/master/projects/jigsaw-puzzle" class="text">Source Code</a></div>
+                    <div class="source button"><div class="bg"></div><a target="_blank" href="https://github.com/Nico-Src/VS-Code-Portfolio/tree/master/projects/jigsaw-puzzle" class="text">Source Code</a></div>
                     <div class="demo button"><div class="bg"></div><a target="_blank" href="https://nico-src.github.io/VS-Code-Portfolio/projects/jigsaw-puzzle" class="text">Live Demo</a></div>
                 </div>
             </div>
